<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".diagnosis.DataChild"
        android:background="@color/blue_light">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
            layout="@layout/status_bar"></include>

        <include
            layout="@layout/toolbar"></include>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints"
                        android:layout_marginTop="@dimen/m_space"
                        android:layout_marginLeft="@dimen/m_space"
                        android:layout_marginRight="@dimen/m_space">

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:gravity="center"
                                  android:layout_marginBottom="@dimen/m_space">
                        <ImageView
                                android:src="@drawable/ic_doctor"
                                android:layout_width="@dimen/x_space"
                                android:layout_height="@dimen/x_space"/>
                    </LinearLayout>

                    <TextView
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="@dimen/m_space"
                            android:text="@string/input_data_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/s_space"/>
                    <TextView
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size"
                            android:text="@string/input_data_info2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/m_space"/>

                    <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:text="@string/hint_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/s_space"/>

                    <EditText
                            android:id="@+id/child_name"
                            android:textSize="@dimen/text_size"
                            android:textColor="@color/black"
                            android:hint="@string/hint_name"
                            android:textColorHint="@color/black"
                            android:padding="@dimen/m_space"
                            android:drawableRight="@drawable/ic_blog"
                            android:background="@drawable/white_background"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/x_space"
                            android:layout_marginBottom="@dimen/s_space"/>

                    <TextView
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="@dimen/text_size"
                            android:text="@string/hint_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/s_space"/>

                    <EditText
                            android:text="@string/eq_dob"
                            android:id="@+id/child_dob"
                            android:hint="@string/eq_dob"
                            android:textSize="@dimen/text_size"
                            android:focusable="false"
                            android:textColor="@color/black"
                            android:padding="@dimen/m_space"
                            android:drawableRight="@drawable/ic_event"
                            android:background="@drawable/white_background"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/x_space"
                            android:layout_marginBottom="@dimen/s_space"/>
                    <Button
                            android:id="@+id/btnSave"
                            android:textColor="@color/white"
                            android:text="@string/txt_next"
                            android:padding="@dimen/m_space"
                            android:background="@drawable/blue_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </ScrollView>
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>