<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".diagnosis.historyDetail.HistoryDetail">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
                layout="@layout/status_bar"/>

        <include
                layout="@layout/toolbar"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:padding="@dimen/s_space"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp">

                <TextView
                        android:layout_marginBottom="@dimen/s_space"
                        android:text="Data anak"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_marginBottom="@dimen/s_space"
                        android:background="@drawable/white_background"
                        android:padding="@dimen/s_space"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:layout_gravity="center"
                            android:padding="@dimen/s_space"
                            android:src="@drawable/ic_doctor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"/>
                    <LinearLayout
                            android:layout_marginStart="@dimen/s_space"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:id="@+id/child_name"
                                android:textAllCaps="true"
                                android:textSize="@dimen/m_space"
                                android:text="@string/author"
                                android:textStyle="bold"
                                android:textColor="@color/colorAccent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/child_dob"
                                android:textSize="@dimen/text_size"
                                android:text="@string/eq_dob"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                        android:layout_marginBottom="@dimen/s_space"
                        android:text="@string/resutl"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/errorNotFound"
                        android:visibility="gone"
                        android:background="@drawable/white_background"
                        android:padding="@dimen/s_space"
                        android:text="@string/errorNotFound"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                <android.support.v7.widget.RecyclerView
                        android:visibility="gone"
                        android:padding="3dp"
                        android:background="@drawable/white_background"
                        android:id="@+id/historyDetailList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints">
                </android.support.v7.widget.RecyclerView>

                <include
                        android:id="@+id/loader"
                        layout="@layout/loading_fb"/>
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>