<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".diagnosis.history.History"
        android:background="@color/blue_light">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
                layout="@layout/status_bar"></include>

        <include
                layout="@layout/toolbar"></include>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:padding="@dimen/s_space"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:layout_marginBottom="@dimen/s_space">
                    <ImageView
                            android:src="@drawable/ic_report"
                            android:layout_width="@dimen/x_space"
                            android:layout_height="@dimen/x_space"/>

                </LinearLayout>

                <TextView
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/m_space"
                        android:text="@string/history_checkup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:textColor="@color/colorAccent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size"
                        android:text= "Berikut merupakan riwayat pemetiksaan yang sudah pernah dilakukan."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/s_space"/>

                <TextView
                        android:layout_marginBottom="@dimen/s_space"
                        android:text="@string/resutl"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/errorNotFound"
                        android:visibility="gone"
                        android:background="@drawable/white_background"
                        android:padding="@dimen/s_space"
                        android:text="@string/errorNotFound"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <android.support.v7.widget.RecyclerView
                        android:visibility="gone"
                        android:padding="3dp"
                        android:background="@drawable/white_background"
                        android:id="@+id/historyList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints"></android.support.v7.widget.RecyclerView>

                <include
                        android:id="@+id/loader"
                        layout="@layout/loading_fb"></include>
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>